--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -66,7 +66,7 @@ server {
     }
 
     location /admin {
-        proxy_set_header "X-Forwarded-For" $proxy_protocol_addr; # To forward the original client's IP address 
+        proxy_set_header "X-Forwarded-For" $proxy_add_x_forwarded_for; # To forward the original client's IP address 
         proxy_set_header "X-Forwarded-Proto" $scheme; # to forward the  original protocol (HTTP or HTTPS)
 	    proxy_set_header "X-Forwarded-Port" "443";
         proxy_set_header Host $host; # to forward the original host requested by the client
@@ -75,7 +75,7 @@ server {
     }
 
     location /oauth2 {
-        proxy_set_header "X-Forwarded-For" $proxy_protocol_addr; # To forward the original client's IP address
+        proxy_set_header "X-Forwarded-For" $proxy_add_x_forwarded_for; # To forward the original client's IP address
         proxy_set_header "X-Forwarded-Proto" $scheme; # to forward the  original protocol (HTTP or HTTPS
 	    proxy_set_header "X-Forwarded-Port" "443";
         proxy_set_header Host $host; # to forward the original host requested by the client
@@ -84,7 +84,7 @@ server {
     }
 
     location /login {
-        proxy_set_header "X-Forwarded-For" $proxy_protocol_addr; # To forward the original client's IP address
+        proxy_set_header "X-Forwarded-For" $proxy_add_x_forwarded_for; # To forward the original client's IP address
         proxy_set_header "X-Forwarded-Proto" $scheme; # to forward the  original protocol (HTTP or HTTPS
 	    proxy_set_header "X-Forwarded-Port" "443";
         proxy_set_header Host $host; # to forward the original host requested by the client
